<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        <LinearLayout 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView_size"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/download_size"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/Button_download"
            android:onClick="download"
            android:text="@string/download"
            android:tag="Button_download"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"  />
         </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_server2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/destination"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/destdir"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="/mnt/sdcard/TuxPaint/">

        </EditText>

    </LinearLayout>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
        android:visibility="visible">

        <TextView
            android:id="@+id/textView_server"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/server"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/texturl"
            android:text="https://sourceforge.net/projects/tuxpaint/files/tuxpaint-stamps/YYY-MM-DD/"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        </EditText>

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/zip_files_are_no_more_needed_once_they_are_already_uncompressed" />

        <ToggleButton
            android:id="@+id/toggleButton_keepzip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:textOff="@string/keep_zip_files"
            android:textOn="@string/discard_zip_files" />

    </LinearLayout>

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="?android:attr/listDivider" />

    <ScrollView
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

<!-- Including the autogenerated tree of stamps packages -->
<include layout="@layout/stampstree" />

 
</ScrollView>

</LinearLayout>
